# creatures

./: README.md  Untitled.ipynb  pyproject.toml
creatures/: simulate.py
docs/: schematic.uml.txt
scratch/boilerplate/: simulate.py
scratch/simultaneous_fights/: threading_example.py
utils/: logging.py
