[tool.poetry]
name = "creatures"
version = "0.1.0"
description = ""
authors = ["Dean Kayton <deankayton@gmail.com>"]
readme = "README.md"
packages = [
    { include = "**/*.py", from = "." }
]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.7.0"
pyqt5 = "^5.15.9"
numpy = "^1.24.2"
jupyter = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.1.0"}
ipdb = "^0.13.11"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
